--- a/static/ploddle.css
+++ b/static/ploddle.css
@@ -1,6 +1,9 @@
-H1 {
-	text-align: center;
+BODY {
+	background: url(/static/ploddle.png);
+	background-size: contain;
+	background-attachment: fixed;
 }
+
 TD {
 	font-family: monospace;
 	font-size: 10px;
@@ -18,6 +21,53 @@ TD {
 }
 #controls DIV {
 	text-align: center;
+}
+
+HEADER {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	background: white;
+	border-bottom: 1px solid black;
+}
+HEADER FORM {
+	margin-bottom: 0px;
+}
+
+SECTION.main {
+	position: fixed;
+	top: 0px;     /* will be corrected by JS */
+	bottom: 0px;  /* as above */
+	left: 0px;
+	right: 0px;
+	overflow-y: scroll;
+}
+
+SECTION.settings {
+	display: none;
+}
+
+FOOTER {
+	position: fixed;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	background: white;
+	border-top: 1px solid black;
+	text-align: center;
+}
+
+#messages {
+	border-collapse: collapse;
+	width: 100%;
+}
+#messages TR TD {
+	padding: 2px 6px;
+	border-top: 1px solid gray;
+}
+#messages TR:first-child TD {
+	border-top: 0px;
 }
 
 .severity-0 {color: black;  background-color: #F44;}
