--- a/static/ploddle.css
+++ b/static/ploddle.css
@@ -4,11 +4,6 @@ BODY {
 	background-attachment: fixed;
 }
 
-TD {
-	font-family: monospace;
-	font-size: 10px;
-}
-
 #controls {
 	position: fixed;
 	top: 64px;
@@ -18,9 +13,6 @@ TD {
 	border-right: none;
 	background: white;
 	border-radius: 16px 0px 0px 16px;
-}
-#controls DIV {
-	text-align: center;
 }
 
 HEADER {
@@ -58,15 +50,19 @@ FOOTER {
 	text-align: center;
 }
 
-#messages {
+.messageview {
 	border-collapse: collapse;
 	width: 100%;
+	font-family: monospace;
+	font-size: 10px;
 }
-#messages TR TD {
+.messageview TR TD {
 	padding: 2px 6px;
+}
+.messageview TR.message TD {
 	border-top: 1px solid gray;
 }
-#messages TR:first-child TD {
+.messageview TR.message:first-child TD {
 	border-top: 0px;
 }
 
