--- a/static/ploddle.css
+++ b/static/ploddle.css
@@ -65,6 +65,9 @@ FOOTER {
 .messageview TR.message:first-child TD {
 	border-top: 0px;
 }
+.messageview SELECT, .messageview INPUT {
+	width: 100%;
+}
 
 .severity-0 {color: black;  background-color: #F44;}
 .severity-1 {color: black;  background-color: #F44;}
