--- a/static/ploddle.css
+++ b/static/ploddle.css
@@ -2,6 +2,8 @@ BODY {
 	background: url(/static/ploddle.png);
 	background-size: contain;
 	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 
 #controls {
