--- a/static/ploddle.css
+++ b/static/ploddle.css
@@ -71,6 +71,9 @@ FOOTER {
 }
 .messageview TR TD {
 	padding: 2px 6px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .messageview TR.message TD {
 	border-top: 1px solid gray;
