--- a/static/ploddle.css
+++ b/static/ploddle.css
@@ -71,9 +71,6 @@ FOOTER {
 }
 .messageview TR TD {
 	padding: 2px 6px;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
 }
 .messageview TR.message TD {
 	border-top: 1px solid gray;
@@ -83,6 +80,12 @@ FOOTER {
 }
 .messageview SELECT, .messageview INPUT {
 	width: 100%;
+}
+
+TD.host, TD.timestamp, TD.daemon {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .severity-0 {color: black;  background-color: #F44;}
