backbone version mostly working

--- a/ploddle/static/css/ploddle.less
+++ b/ploddle/static/css/ploddle.less
@@ -102,6 +102,10 @@ TD.host, TD.timestamp, TD.daemon {
 	text-align: center;
 }
 
+.enabled {
+	background: green;
+}
+
 .severity-0 {color: black;  background-color: #F44;}
 .severity-1 {color: black;  background-color: #F44;}
 .severity-2 {color: black;  background-color: #F44;} /* critical */
