--- a/ploddle/static/css/ploddle.less
+++ b/ploddle/static/css/ploddle.less
@@ -73,7 +73,7 @@ FOOTER {
 
 .messageview {
 	border-collapse: collapse;
-	width: 100%;
+	/*width: 100%;*/
 	font-family: monospace;
 	font-size: 10px;
 
